@@ -33,6 +33,12 @@ Version 1.4.5 - CVS
   - Fixed cid handling from Outlook Express client when it doesn't create a
     valid content-id to go with CID tag.  This resolves #855320, and should
 	be considered a workaround.  The real issues needs resolving by MS.
+  - Strip <outbind://> tags out. This is a Microsoft only protocol and
+    references files local to the sending machine.  This causes issues
+    with Internet Explorer.
+  - Replace <img src="outbind://"> links with clean images to stop
+    issues with Internet Explorer not being able to track down the
+	image.
 
 
 Version 1.4.4 - 21 January 2005
